--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,35 @@
+:root {
+    --font-family: 'Poppins', sans-serif;
+    --fw-light: 300;
+    --fw-semibold: 600;
+    --fc-dark: #222222;
+}
+
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
+}
+
+
+/* typography */
+
+body {
+    font-family: var(--font-family);
+}
+
+.hero__title {
+    font-size: 36px;
+    font-weight: var(--fw-semibold);
+}
+
+.hero__summary {
+    font-size: 16px;
+    font-weight: var(--fw-light);
+    color: var(--fc-dark);
+    line-height: 18px;
 }
 
 
@@ -14,10 +40,34 @@ body {
     height: 70px;
     display: flex;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    padding: 20px 36px;
 }
 
 .navbar__logo {
-    width: 82px;
-    height: 25px;
-    margin: 22px 0px 22px 30px;
+    max-width: 100px;
+}
+
+
+/* hero */
+
+section {
+    padding: 20px;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+}
+
+.hero__photo {
+    max-width: 400px;
+    align-self: center;
+}
+
+.hero__title {
+    margin-bottom: 16px;
+}
+
+.hero__summary {
+    margin-top: 0;
 }
