--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -32,6 +32,17 @@ body {
     line-height: 18px;
 }
 
+.card__status {
+    font-size: 10.24px;
+}
+
+.card p {
+    line-height: 13px;
+    font-size: 12px;
+    margin: 0;
+    margin-top: 5px;
+}
+
 
 /* navbar */
 
@@ -70,4 +81,58 @@ section {
 
 .hero__summary {
     margin-top: 0;
+}
+
+
+/* card */
+
+.card {
+    padding: 0;
+    width: 176px;
+    height: 303px;
+    background-color: #faa;
+    display: flex;
+    flex-direction: column;
+}
+
+.card__image {
+    width: 100%;
+}
+
+.card__stats {
+    display: flex;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.card__status {
+    background-color: #fff;
+    width: 61px;
+    height: 15px;
+    text-align: center;
+    border-radius: 2px;
+    position: absolute;
+    left: 10px;
+    top: 73px;
+}
+
+.card__star {
+    width: 14px;
+    height: 14px;
+    align-self: center;
+    margin: 0;
+    margin-top: 5px;
+    margin-right: 5px;
+}
+
+.card__rating {
+    margin: 0;
+}
+
+.card__review-count {
+    margin: 0;
+}
+
+.card__title {
+    margin-top: 39px;
 }
