refactored to dynamically create cards

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -87,6 +87,10 @@ section {
 
 /* card */
 
+.cards {
+    display: flex;
+}
+
 .card {
     width: 176px;
 }
@@ -97,6 +101,7 @@ section {
 
 .card__image {
     width: 100%;
+    border-radius: 10px;
 }
 
 .card__stats {
