--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -101,6 +101,7 @@ section {
     flex: 0 0 auto;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .gray {
@@ -117,15 +118,14 @@ section {
     align-items: center;
 }
 
-.card__status {
-    background-color: #fff;
-    width: 61px;
-    height: 15px;
-    text-align: center;
-    border-radius: 2px;
+.card__badge {
     position: absolute;
-    left: 10px;
-    top: 73px;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
 
 .card__star {
